crates/agent/src/evolution/snapshots/agent__evolution__test__evolution_preserves_changes_already_in_the_draft.snap
---
source: crates/agent/src/evolution/test.rs
expression: draft_specs
---
[
    Record {
        catalog_name: "evolution/MaterializationA",
        spec_type: Some(
            Materialization,
        ),
        spec: Some(
            Object {
                "bindings": Array [
                    Object {
                        "backfill": Number(12),
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "new": String("stuff"),
                            "targetThingy": String("newThing"),
                        },
                        "source": String("evolution/CollectionA"),
                    },
                    Object {
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "targetThingy": String("bThing"),
                        },
                        "source": String("evolution/CollectionB"),
                    },
                ],
                "endpoint": Object {
                    "connector": Object {
                        "config": Object {
                            "new": Object {
                                "stuff": String("here"),
                            },
                        },
                        "image": String("matImage:v1"),
                    },
                },
            },
        ),
    },
]
